Code style and linter fixes, add comments methods with docs and tests
