# server/router/bids.js
@@ -4,6 +4,12 @@ import commentsController from "../controllers/comments.js";
 import validateJwt from "../middleware/jwtValidation.js";
 import validateRequest from "../middleware/requestValidation.js";
 import { createBidSchema, getBidSchema, getBidsListSchema, processBidSchema } from "../utils/validationSchemas/bid.js";
+import {
+  createBidCommentSchema,
+  deleteBidCommentSchema,
+  editBidCommentSchema,
+  getBidCommentsListSchema,
+} from "../utils/validationSchemas/comments.js";
 
 const router = express.Router();
 
@@ -19,12 +25,12 @@ router
 
 router
   .route("/:id/comments")
-  .get(commentsController.getComments)
-  .post(commentsController.createComment);
+  .get(validateJwt, validateRequest(getBidCommentsListSchema), commentsController.getComments)
+  .post(validateJwt, validateRequest(createBidCommentSchema), commentsController.createComment);
 
 router
   .route("/:id/comments/:commentId")
-  .patch(commentsController.patchComment)
-  .delete(commentsController.deleteComment);
+  .patch(validateJwt, validateRequest(editBidCommentSchema), commentsController.editComment)
+  .delete(validateJwt, validateRequest(deleteBidCommentSchema), commentsController.deleteComment);
 
 export default router;
